# sentinelrisk

backend/: .env  Cargo.toml  README.md
backend/src/: db.rs  main.rs
backend/src/controllers/: health_controller.rs  incident_handler.rs  mod.rs  risk_controller.rs
backend/src/models/: evaluation.rs  incident.rs  mod.rs  risk.rs  risk_history.rs
deployment/: README.md
docs/: README.md
frontend/: .gitignore  Cargo.toml  README.md  copy-css.sh  index.html  package-lock.json  package.json  start.sh  trunk.toml
frontend/src/: lib.rs  main.rs
frontend/src/components/: sidebar.rs
frontend/src/pages/: add_risk.rs  edit_risk.rs  mod.rs  risk_list.rs  view_risk.rs
